# Raytracer

./: .gitignore  CMakeLists.txt  README.md  Raytracer.sln
Raytracer/: Raytracer.vcxproj  Raytracer.vcxproj.filters
Raytracer/src/: Raytracer.cpp  camera.h  hittable.h  hittables.cpp  hittables.h  material.h  ray.h  raytracer.cpp  sphere.cpp  sphere.h
Raytracer/src/RTmath/: numeric.h  vec3.cpp  vec3.h
Raytracer/src/math/: numeric.cpp  numeric.h  vec3.cpp  vec3.h
